// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Cell component Center aligned cell renders with input 1`] = `
<td
  className="unanswered centerAlign"
  id={1}
>
  <input
    className="unanswered"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value=""
  />
</td>
`;

exports[`Table Cell component Center aligned cell renders with text 1`] = `
<td
  className="centerAlign"
  id={1}
>
  Testing Text
</td>
`;

exports[`Table Cell component Left aligned cell renders with input 1`] = `
<td
  className="unanswered leftAlign"
  id={1}
>
  <input
    className="unanswered"
    onBlur={[Function]}
    onChange={[Function]}
    type="text"
    value=""
  />
</td>
`;

exports[`Table Cell component Left aligned cell renders with text 1`] = `
<td
  className="leftAlign"
  id={1}
>
  Testing Text
</td>
`;
